@@ -77,5 +77,4 @@ def create_reader(format, compression=""):
         decompressor = DECOMPRESSERS.get(compression)
         if decompressor:
             reader = decompressor(reader)
-            
     return reader
