@@ -33,29 +33,8 @@
 #
 #
 
-from deluge.log import LOG as log
-from common import raiseError
+from common import raiseError, remove_zeros
 
-def remove_zeros(ip):
-    """
-    Removes unneeded zeros from ip addresses.
-    
-    Example: 000.000.000.003 -> 0.0.0.3
-    
-    :param ip: the ip address
-    :type ip: string
-    
-    :returns: the ip address without the unneeded zeros
-    :rtype: string
-    
-    """
-    new_ip = []
-    for part in ip.split("."):
-        while part[0] == "0" and len(part) > 1:
-            part = part[1:]
-        new_ip.append(part)
-    return ".".join(new_ip)
-    
 class ReaderParseError(Exception):
     pass
 
